# vivid

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  ASSET_LOADING.md  CHANGELOG.md  CHECKLIST.md  CLAP_HOST.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CORE_ADDON.md  Doxyfile  MEMORY_LEAK.md  OPERATOR_REFACTOR.md  PIPELINE_BUILDER.md  PLAN-01-overview.md  PLAN-03-operators.md  PLAN-04-extension.md  PLAN-05-media.md  PLAN-06-3d.md  PLAN-07-community.md  PLAN-08-addons.md  PLAN-09-imgui.txt  POINT_SHADOW_INVESTIGATION.md  README.md  RENDERERS.md  RENDERER_REFACTOR.md  ROADMAP.md  SHADOWS.md  STYLE.md  TODO.md  TODO.txt  VST_HOST.md  WEB_EXPORT.md  WINDOWS.md  _AUDIO_IMPROVEMENTS.md  _AUDIO_PARITY.md  _AUDIO_VIZ.md  _CLAP_HOST.md  (+16 more)
addons/: CMakeLists.txt
addons/vivid-audio/: CMakeLists.txt  README.md  addon.json
addons/vivid-audio/src/: ar.cpp  audio_analyzer.cpp  audio_effect.cpp  audio_file.cpp  audio_filter.cpp  audio_gain.cpp  audio_in.cpp  audio_mixer.cpp  band_split.cpp  beat_detect.cpp  bitcrush.cpp  chorus.cpp  clap.cpp  clock.cpp  compressor.cpp  crackle.cpp  decay.cpp  delay.cpp  echo.cpp  envelope.cpp  euclidean.cpp  fft.cpp  flanger.cpp  fm_synth.cpp  formant.cpp  gate.cpp  granular.cpp  hihat.cpp  kick.cpp  levels.cpp  limiter.cpp  multi_sampler.cpp  noise_gen.cpp  oscillator.cpp  overdrive.cpp  phaser.cpp  pitch_env.cpp  poly_synth.cpp  preset.cpp  reverb.cpp  (+9 more)
addons/vivid-audio/tests/: CMakeLists.txt  test_analysis.cpp  test_clock.cpp  test_effects.cpp  test_sequencer.cpp  test_synthesis.cpp
addons/vivid-csg/: CMakeLists.txt  addon.cmake  addon.json
addons/vivid-csg/src/: csg.cpp
addons/vivid-effects-2d/: CMakeLists.txt  README.md  addon.json
addons/vivid-effects-2d/shaders/: feedback.wgsl
addons/vivid-effects-2d/src/: barrel_distortion.cpp  bloom.cpp  blur.cpp  brightness.cpp  canvas.cpp  canvas_renderer.cpp  canvas_renderer.h  chromatic_aberration.cpp  composite.cpp  crt_effect.cpp  displace.cpp  dither.cpp  downsample.cpp  edge.cpp  feedback.cpp  font_atlas.cpp  font_atlas.h  gradient.cpp  hsv.cpp  image.cpp  lfo.cpp  mirror.cpp  noise.cpp  output.cpp  particle_renderer.cpp  particles.cpp  pixelate.cpp  plexus.cpp  point_sprites.cpp  quantize.cpp  ramp.cpp  scanlines.cpp  shape.cpp  solid_color.cpp  switch_op.cpp  texture_operator.cpp  tile.cpp  transform.cpp  vignette.cpp
addons/vivid-effects-2d/tests/: CMakeLists.txt  test_blur.cpp  test_composite.cpp  test_noise.cpp
addons/vivid-gui/: CMakeLists.txt
addons/vivid-gui/src/: imgui_integration.cpp
addons/vivid-imgui/: CMakeLists.txt  addon.cmake  addon.json
addons/vivid-imgui/src/: chain_visualizer.cpp  imgui_integration.cpp
addons/vivid-io/: CMakeLists.txt  README.md  addon.json
addons/vivid-io/src/: image_loader.cpp
addons/vivid-midi/: CMakeLists.txt
addons/vivid-midi/src/: midi_file_player.cpp  midi_in.cpp  midi_out.cpp
addons/vivid-ml/: CMakeLists.txt
addons/vivid-ml/src/: onnx_model.cpp  pose_detector.cpp
addons/vivid-models/: CMakeLists.txt  addon.cmake  addon.json
addons/vivid-models/src/: animation_system.cpp  model_loader.cpp
addons/vivid-network/: CMakeLists.txt  README.md  addon.json
addons/vivid-network/src/: osc_in.cpp  (+4 more)
addons/vivid-nuklear/: CMakeLists.txt  addon.cmake  addon.json
addons/vivid-render3d/: CMakeLists.txt  README.md  addon.json
addons/vivid-serial/: CMakeLists.txt  LICENSE  README.md
addons/vivid-spout/: CMakeLists.txt  addon.cmake  addon.json
addons/vivid-storage/: CMakeLists.txt  addon.cmake  addon.json
addons/vivid-syphon/: CMakeLists.txt  addon.cmake  addon.json
addons/vivid-video/: CMakeLists.txt  README.md  addon.json
cli/: CMakeLists.txt  app.cpp  app.h  chain_visualizer.cpp  chain_visualizer.h  cli.cpp  editor_bridge.cpp  main.cpp  mcp_server.cpp
core/: CMakeLists.txt
core/imgui/: chain_visualizer.cpp  chain_visualizer.h  imgui_integration.cpp  imgui_integration.h
core/nodegraph/: node_graph.cpp
core/shaders/: blit.wgsl  ramp.wgsl  text.wgsl
core/src/: addon_manager.cpp  addon_registry.cpp  asset_loader.cpp  audio_graph.cpp  audio_operator.cpp  audio_output.cpp  chain.cpp  chain_visualizer.cpp  cli.cpp  context.cpp  display.cpp  editor_bridge.cpp  hot_reload.cpp  main.cpp  node_graph.cpp  operator.cpp  operator_registry.cpp  operator_viz.cpp  overlay_canvas.cpp  platform_macos.h  platform_macos.mm  platform_stub.cpp  video_exporter.mm  video_exporter_linux.cpp  video_exporter_win.cpp  viz_helpers.cpp  window_manager.cpp
examples/2d-physics/: CMakeLists.txt  chain.cpp
examples/diligent-test/: CMakeLists.txt  chain.cpp  main.cpp
examples/image-loader/: CMakeLists.txt  README.md  chain.cpp
examples/spout-in/: CMakeLists.txt  chain.cpp
examples/syphon-out/: CMakeLists.txt  chain.cpp
examples/wipeout-vehicle/: CLAUDE.md  CMakeLists.txt  GOAL.txt  SPEC.md  chain.cpp  livery_gen.cpp  livery_gen.h
operators/: CMakeLists.txt  blur.cpp  brightness.cpp  chromatic_aberration.cpp  composite.cpp  constant.cpp  displacement.cpp  edge.cpp  feedback.cpp  gradient.cpp  hsv.cpp  imagefile.cpp  lfo.cpp  logic.cpp  math.cpp  mirror.cpp  noise.cpp  particles.cpp  passthrough.cpp  pixelate.cpp  pointsprites.cpp  reference.cpp  render3d.cpp  scanlines.cpp  shape.cpp  switch.cpp  tile.cpp  transform.cpp  videofile.cpp  webcam.cpp
runtime/: CMakeLists.txt
runtime/src/: addon_registry.cpp  addon_registry.h  animation.cpp  async_readback.cpp  async_readback.h  audio_capture.cpp  audio_capture.h  audio_player.cpp  audio_player.h  audioin.cpp  camera.cpp  camera3d.h  camera_capture.h  camera_capture_macos.mm  camera_capture_windows.cpp  chain.cpp  chain_visualizer.cpp  compiler.cpp  compiler.h  context.cpp  cubemap.cpp  cubemap.h  diligent_backend.cpp  diligent_backend.h  diligent_pbr.cpp  diligent_pbr.h  diligent_renderer.cpp  diligent_renderer.h  fft.cpp  fft.h  file_watcher.cpp  file_watcher.h  font_atlas.cpp  font_atlas.h  gltf_model.cpp  graph.cpp  graph.h  hap_decoder.cpp  hap_decoder.h  hot_reload.cpp  (+60 more)
tests/: CMakeLists.txt  README.md
tests/integration/: test_chain.cpp
tests/unit/: test_effects_2d.cpp
(+851 files in other folders)
